--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,6 +105,7 @@ body {
         rounded-lg
 }
 
+
 .topcard-percentage{
     @apply
         bg-green-200 
@@ -127,4 +128,118 @@ body {
         border
         rounded-lg
         bg-white
-    }
+}
+
+.recentorder{
+    @apply 
+        w-full
+        col-span-1
+        relative
+        lg:h-[70vh]
+        h-[50vh]
+        mx-auto
+        my-5
+        p-10
+        border 
+        rounded-lg
+        bg-white
+        overflow-scroll
+        scroll-smooth
+        
+
+}
+.recentorder-inner{
+    @apply
+        bg-gray-50 
+        hover:bg-gray-100
+        rounded-lg
+        my-3
+        p-2
+        flex
+        items-center
+        cursor-pointer
+        transition
+        duration-1000
+        ease-out
+       
+}
+
+.recentorderbag{
+    @apply
+      text-purple-800 
+        text-2xl
+        transform 
+        hover:scale-125
+
+}
+
+.recentdate{
+    @apply
+        lg:flex
+        md:hidden
+        absolute
+        right-6
+        text-sm
+}
+
+.costumers{
+    @apply
+        w-full
+        m-auto
+        p-4
+        border
+        
+        
+       
+       
+}
+
+.customersrowhead{
+    @apply 
+    my-3 
+    p-2 
+    grid 
+    md:grid-cols-4 
+    sm:grid-cols-3
+    grid-cols-2
+    text-xl
+    font-bold
+    items-center
+    justify-center
+    
+    transition
+    duration-500
+    ease-out
+    
+       
+}
+
+.customerslist{
+    @apply
+      bg-gray-50
+      hover:bg-gray-100
+        rounded-lg
+        my-3
+        p-2
+        grid
+        md:grid-cols-4
+        sm:grid-cols-3
+        grid-cols-2
+        items-center 
+        justify-center
+        text-xl
+}
+
+.customersPersonIcon{
+    @apply 
+        bg-gray-300 
+        rounded-md 
+        text-4xl 
+        p-2 
+        text-gray-400
+        transition
+        ease-out
+        transform
+        hover:scale-125
+
+}
